2004-09-14  Synge Todo <wistaria@comp-phys.org>

	* Fixed for non-bipartite lattices.
	
2004-09-13  Synge Todo <wistaria@comp-phys.org>

        * version 3.1b1

	* Fixed energy offset for SSE with "ergodic" loop solutions.

	* Added negative sign support.
	
2004-08-25  Synge Todo <wistaria@comp-phys.org>

	* Fixed xxz.h for systems with different spin sizes.

	* Added support for extenal field in site_parameter.

	* Added an extra parameter to the default weight classes for
	supporting "erdogic" loop solutions.
	
2004-08-20  Synge Todo <wistaria@comp-phys.org>

	* Changed solve_llsp so that the SVD is used instead of QL
	factorization.  Added test programs gesvd and llsp.  Removed
	the test program gels.
	
2004-08-19  Synge Todo <wistaria@comp-phys.org>

	* Added support for MKL 7.0
	
2004-07-22  Synge Todo  <wistaria@comp-phys.org>

        * version 3.0.1 released.

2004-07-09  Synge Todo  <wistaria@comp-phys.org>

	* Fixed random_choice class template.
	
2004-06-25  Synge Todo  <wistaria@comp-phys.org>

	* Added alternating_tensor (Levi-Civita or permutation symbol)
	function in looper/util.h.
	
2004-06-11  Synge Todo  <wistaria@comp-phys.org>

        * version 3.0 released.

2004-06-08  Synge Todo  <wistaria@comp-phys.org>
	
	* Turned off maintainer mode for GNU autotools.
	
2004-06-03  Synge Todo  <wistaria@comp-phys.org>

	* Added new measurement staggered_generalized_susceptibility_imp.
	Renamed generalized_susceptibility_imp as
	uniform_generalized_susceptibility_imp.

2004-05-17  Synge Todo  <wistaria@comp-phys.org>
	
	* Updated automake version to 1.8.5.

2004-05-14  Synge Todo  <wistaria@comp-phys.org>

	* Changed excecutable names (qmc* -> loop*).
	
2004-04-21  Synge Todo  <wistaria@comp-phys.org>

        * Fixed a bug in static_correlation in looper/path_integral.h

2004-04-20  Synge Todo  <wistaria@comp-phys.org>

        * Optimized measurement of staggered susceptibility in SSE.

2004-04-14  Synge Todo  <wistaria@comp-phys.org>
